--- a/STINK_student_records/Test_classes/Assessment/STINK_student_records_Fixture_Assessment.xml.in
+++ b/STINK_student_records/Test_classes/Assessment/STINK_student_records_Fixture_Assessment.xml.in
@@ -57,7 +57,7 @@
       <value>Assignment 1</value>
       <value>Database Implementation</value>
       <value>A</value>
-      <value>F</value>
+      <value>##FALSE_VALUE##</value>
       <value>10</value>
       <value>100</value>
       <value>INFO214</value>
@@ -68,7 +68,7 @@
       <value>Practical Test</value>
       <value>A nasty, nasty test.</value>
       <value>T</value>
-      <value>F</value>
+      <value>##FALSE_VALUE##</value>
       <value>10</value>
       <value>100</value>
       <value>INFO214</value>
@@ -79,7 +79,7 @@
       <value>Final Examination</value>
       <value>Ooh, scary...</value>
       <value>X</value>
-      <value>T</value>
+      <value>##TRUE_VALUE##</value>
       <value>50</value>
       <value>100</value>
       <value>INFO321</value>
