--- a/STINK_student_records/Test_classes/Result/STINK_student_records_Fixture_Result.xml.in
+++ b/STINK_student_records/Test_classes/Result/STINK_student_records_Fixture_Result.xml.in
@@ -63,21 +63,21 @@
       <value>1234568</value>
       <value>+16461234567</value>
       <value>Los Angeles</value>
-      <value>T</value>
+      <value>##TRUE_VALUE##</value>
       <value />
     </row>
     <row>
       <value>1234570</value>
       <value>02136507402</value>
       <value>45 Pine Hill Road</value>
-      <value>F</value>
+      <value>##FALSE_VALUE##</value>
       <value />
     </row>
     <row>
       <value>1234571</value>
       <value>02232104933</value>
       <value>34 Scobie Road</value>
-      <value>F</value>
+      <value>##FALSE_VALUE##</value>
       <value />
     </row>
   </table>
@@ -139,7 +139,7 @@
       <value>Assignment 1</value>
       <value>Database Implementation</value>
       <value>A</value>
-      <value>F</value>
+      <value>##FALSE_VALUE##</value>
       <value>10</value>
       <value>100</value>
       <value>INFO214</value>
@@ -150,7 +150,7 @@
       <value>Practical Test</value>
       <value>A nasty, nasty test.</value>
       <value>T</value>
-      <value>F</value>
+      <value>##FALSE_VALUE##</value>
       <value>10</value>
       <value>100</value>
       <value>INFO214</value>
@@ -161,7 +161,7 @@
       <value>Final Examination</value>
       <value>Ooh, scary...</value>
       <value>X</value>
-      <value>T</value>
+      <value>##TRUE_VALUE##</value>
       <value>50</value>
       <value>100</value>
       <value>INFO321</value>
