--- a/STINK_student_records/Test_classes/Student/STINK_student_records_Fixture_Student.xml.in
+++ b/STINK_student_records/Test_classes/Student/STINK_student_records_Fixture_Student.xml.in
@@ -73,14 +73,14 @@
       <value>1234568</value>
       <value>+16461234567</value>
       <value>Los Angeles</value>
-      <value>T</value>
+      <value>##TRUE_VALUE##</value>
       <value />
     </row>
     <row>
       <value>1234570</value>
       <value>02136507402</value>
       <value>45 Pine Hill Road</value>
-      <value>F</value>
+      <value>##FALSE_VALUE##</value>
       <value>1234567</value>
     </row>
   </table>
