• Initial basic working version of Other specification. • Removed generated fixture file.

--- a/UsedCars/Test_classes/Sales/UsedCars_Fixture_Sales.xml.in
+++ b/UsedCars/Test_classes/Sales/UsedCars_Fixture_Sales.xml.in
@@ -1,66 +1,74 @@
 <dataset>
-  <table name="person">
-    <column>person_id</column>
-    <column>surname</column>
-    <column>other_names</column>
-    <column>contact_phone</column>
-    <column>contact_address</column>
-    <column>email</column>
-    <column>username</column>
-    <row>
-      <value>1234567</value>
-      <value>Dyson</value>
-      <value>Sang Russell</value>
-      <value>02139414116</value>
-      <value>74 Patmos Avenue</value>
-      <value>sang.dyson@stink.ac.nz</value>
-      <value>dyssa123</value>
-    </row>
-    <row>
-      <value>1234569</value>
-      <value>Kwak</value>
-      <value>Patricia Helen</value>
-      <value>02137254888</value>
-      <value>28 Cherry Drive</value>
-      <value>pat.kwak@stink.ac.nz</value>
-      <value>kwapa999</value>
-    </row>
-    <row>
-      <value>1234568</value>
-      <value>Soto</value>
-      <value>Teresa Stephanie</value>
-      <value>02737076169</value>
-      <value>21 Elwyn Crescent</value>
-      <value>sotte123@stink.ac.nz</value>
-      <value>sotte123</value>
-    </row>
-    <row>
-      <value>1234570</value>
-      <value>Reed</value>
-      <value>John Clifford</value>
-      <value>02136507402</value>
-      <value>45 Pine Hill Road</value>
-      <value>reejo282@stink.ac.nz</value>
-      <value>reejo282</value>
-    </row>
-    <row>
-      <value>1234571</value>
-      <value>Barajas</value>
-      <value>Charles William</value>
-      <value>02232104933</value>
-      <value>34 Scobie Road</value>
-      <value>barch087@stink.ac.nz</value>
-      <value>barch087</value>
-    </row>
-  </table>
   <table name="staff">
     <column>staff_id</column>
-    <column>rank</column>
-    <column>salary</column>
+    <column>firstname</column>
+    <column>lastname</column>
+    <column>address</column>
+    <column>phone</column>
+    <column>date_hired</column>
+    <column>date_of_birth</column>
     <row>
-      <value>1234567</value>
-      <value>L</value>
-      <value>55000.00</value>
+      <value>4567</value>
+      <value>Sang</value>
+      <value>Dyson</value>
+      <value>74 Patmos Avenue</value>
+      <value>02139414116</value>
+      <value>2008-12-05</value>
+      <value>1979-06-17</value>
+    </row>
+    <row>
+      <value>4569</value>
+      <value>Patricia</value>
+      <value>Kwak</value>
+      <value>28 Cherry Drive</value>
+      <value>02137254888</value>
+      <value>2012-04-23</value>
+      <value>1967-08-08</value>
+    </row>
+    <row>
+      <value>4568</value>
+      <value>Teresa</value>
+      <value>Soto</value>
+      <value>21 Elwyn Crescent</value>
+      <value>02737076169</value>
+      <value>2005-06-04</value>
+      <value>1992-12-25</value>
+    </row>
+    <row>
+      <value>4570</value>
+      <value>John</value>
+      <value>Reed</value>
+      <value>45 Pine Hill Road</value>
+      <value>02136507402</value>
+      <value>2013-08-13</value>
+      <value>1985-05-21</value>
+    </row>
+    <row>
+      <value>4571</value>
+      <value>Charles</value>
+      <value>Barajas</value>
+      <value>34 Scobie Road</value>
+      <value>02232104933</value>
+      <value>2001-11-09</value>
+      <value>1964-09-15</value>
+    </row>
+  </table>
+  <table name="service">
+    <column>staff_id</column>
+    <column>on_commission</column>
+    <column>commission_rate</column>
+    <column>gross_earnings</column>
+    <row>
+      <value>4567</value>
+      <value>##TRUE_VALUE##</value>
+      <value>0.15</value>
+      <value>12345.67</value>
+    </row>
+    <row>
+      <value>4569</value>
+      <value>##FALSE_VALUE##</value>
+      <value>0</value>
+      <value>12345.67</value>
     </row>
   </table>
 </dataset>
