--- a/UsedCars/Test_classes/Sales/UsedCars_Fixture_Sales.xml.in
+++ b/UsedCars/Test_classes/Sales/UsedCars_Fixture_Sales.xml.in
@@ -53,7 +53,7 @@
       <value>1964-09-15</value>
     </row>
   </table>
-  <table name="service">
+  <table name="sales">
     <column>staff_id</column>
     <column>on_commission</column>
     <column>commission_rate</column>
